<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.memostenes.mascotas.Acerca">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"></include>
    <TextView
        android:id="@+id/tvNombreCto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreCto"
        android:layout_below="@+id/miActionBar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tvCiudadCto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCiudadCto"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvNombreCto"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tvCorreoCto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCorreoCto"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvCiudadCto"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/memo"
        android:layout_below="@+id/tvCorreoCto"

        />

</RelativeLayout>
